Clean up: remove reference files from git tracking
- Remove jpg images and txt source files from repo
- Update .gitignore to prevent future commits of reference materials
- Files still exist locally, just not tracked in git

--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,13 @@ docs/reference/
 
 # Research paper page images
 Non_pro Access_rsrch_p*.png
+1768673143697-*.jpg
+GEPA.jpg
 
-# Personal notes
+# Personal notes and reference txt files in root
 **/Jason's thoughts*.txt
+**/MFUX*.txt
+**/*Before Model UX*.txt
 
 # Python
 __pycache__/
