Consolidate rubric docs: cleaner structure, less duplication
ADDED:
- RUBRIC_REWRITES.md: All 6 metrics in one doc with before/after/why
- 'What success looks like' section to RUBRIC_CRAFT_GUIDE.md

REMOVED (moved to omni-eval-improvements/archive):
- 6 individual walkthrough files (now consolidated)
- RUBRIC_REWRITE_GUIDANCE.md (Omni team-specific)
- EVAL_RUBRICS_CD_GUIDE.md (Omni team-specific)
- REVISED_RUBRICS_PROPOSAL.md (Omni proposal)
- VOICE_TONE_RUBRIC_PROPOSAL.md (Omni proposal)

UPDATED:
- .gitignore: JYB personal notes now excluded

Result: docs/eval/ now has just 2 clean docs:
- RUBRIC_CRAFT_GUIDE.md (standalone teaching doc)
- RUBRIC_REWRITES.md (practical before/after reference)

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ GEPA.jpg
 **/Jason's thoughts*.txt
 **/MFUX*.txt
 **/*Before Model UX*.txt
+**/JYB_RUBRIC_CRAFT_NOTES.md
+**/JYB_*.md
 
 # Python
 __pycache__/
