Hide Eval Playground until ready for internal testing
Moved to _wip/ folder (gitignored):
- tools/eval_playground/ → _wip/eval_playground/

Removed references from:
- README.md (Tools section, Quick Links)
- CONTEXT_SUMMARY.md (file tree, Tools section)

Reason: Requires OpenAI API key (blocked by corp security),
based on potentially outdated Omni eval assumptions.
Will revisit when internal tooling requirements are clearer.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Work in progress (not ready for sharing)
+_wip/
+
 # Reference documents (keep locally, don't track in git)
 docs/reference/
 *.docx
