Hide CONTEXT_SUMMARY.md (personal working notes)
- Added to .gitignore
- Removed from git tracking (still exists locally)
- Removed 'New here?' banner from README

README is the entry point. Context summary is for personal reference.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Work in progress (not ready for sharing)
 _wip/
 
+# Personal context notes
+CONTEXT_SUMMARY.md
+
 # Reference documents (keep locally, don't track in git)
 docs/reference/
 *.docx
