Add Design-to-Model gap to Why Model UX Exists
Expanded document to address the three-way bridge: Content Design,
Product Design, and Engineering. Added section on how design specs
(Figma) often never reach the model, creating a structural gap that
Model UX fills. Updated tables and diagram to reflect this.

Also added BETTERWORKS_PROGRESS_SUMMARY.md to gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ _wip/
 
 # Personal context notes
 CONTEXT_SUMMARY.md
+BETTERWORKS_PROGRESS_SUMMARY.md
 
 # Reference documents (keep locally, don't track in git)
 docs/reference/
